@@ -37,6 +37,7 @@ class tx_fhdebug {
 			'function' => '->'
 		);
 	static public $csConvObj;
+	static public $errorLogFile = 'phpDebugErrorLog.txt';
 
 	static protected $bActive = FALSE;	// inactive without initialization
 	static protected $bInitialization = FALSE;
@@ -54,12 +55,14 @@ class tx_fhdebug {
 	static private $bHtml = FALSE;
 	static private $bWriteHeader = FALSE;
 	static private $instanceCount = 0;
+	static private $errorLogFilename;
 
 
 	public function __construct ($newExtConf) {
 		self::$extConf = $newExtConf;
 		self::$instanceCount++;
 		self::$csConvObj = t3lib_div::makeInstance('t3lib_cs');
+		self::$errorLogFilename = t3lib_div::resolveBackPath(PATH_typo3conf . '../' . self::$errorLogFile);
 	}
 
 	public function debugControl (array $parameters) {
@@ -71,20 +74,28 @@ class tx_fhdebug {
 	}
 
 	static public function write ($out) {
+		$result = FALSE;
+
 		if (self::$hndFile) {
 			fputs(self::$hndFile, $out);
+			$result = TRUE;
 		} else if ($extConf['DEBUGFILE'] == '') {
 			echo $out;
+			$result = TRUE;
 		}
+
+		return $result;
 	}
 
 	static public function writeHeader ($cssFilename) {
 		$out = '
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Debug generated by fh_debug</title>
-  <link rel="stylesheet" href="../' . t3lib_extMgm::siteRelPath(FH_DEBUG_EXTkey) . 'res/' . $cssFilename . '">
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <link rel="stylesheet" href="../' . t3lib_extMgm::siteRelPath(FH_DEBUG_EXTkey) . 'res/' . $cssFilename . '" />
 </head>
 
 <body>
@@ -123,14 +134,15 @@ class tx_fhdebug {
 				)
 			);
 
+// error_log ('verifyIpAddress $bIpIsAllowed ' . $bIpIsAllowed . chr(13), 3, self::$errorLogFilename);
 		return $bIpIsAllowed;
 	}
 
 	static public function init ($ipAddress) {
-// error_log ('init START ========================================== ');
+// error_log ('init START ========================================== ' . chr(13), 3, self::$errorLogFilename);
 
 		if (self::hasBeenInitialized()) {
-// error_log ('init $bHasBeenInitialized');
+// error_log ('init Abbruch $bHasBeenInitialized', 3, self::$errorLogFilename);
 			return;
 		}
 
@@ -139,26 +151,23 @@ class tx_fhdebug {
 
 		$extConf = self::getExtConf();
 		$backtrace = self::getTraceArray();
-//  error_log('init backtrace: ' . print_r($backtrace, TRUE));
-//  error_log('init $extConf: ' . print_r($extConf, TRUE));
+//  error_log('init backtrace: ' . print_r($backtrace, TRUE) . chr(13), 3, self::$errorLogFilename);
+//  error_log('init $extConf: ' . print_r($extConf, TRUE) . chr(13), 3, self::$errorLogFilename);
 
 		if ($extConf['STARTFILES'] != '') {
-//  error_log('init $extConf[\'STARTFILES\']: ' . $extConf['STARTFILES']);
 			$startFileArray = t3lib_div::trimExplode(',', $extConf['STARTFILES']);
 			$bStartFileFound = FALSE;
 			if (is_array($startFileArray)) {
 				foreach ($startFileArray as $startFile) {
 					if ($backtrace['0']['file'] == $startFile) {
-//  error_log('init $startFile found: ' . $startFile);
 						$bStartFileFound = TRUE;
 						break;
 					}
 				}
 			}
 
-//  error_log('init $bStartFileFound: ' . $bStartFileFound);
 			if (!$bStartFileFound) {
-// error_log ('init kein STARTFILES');
+//  error_log('init Abbruch kein STARTFILES ' . chr(13), 3, self::$errorLogFilename);
 				return;
 			}
 		}
@@ -172,11 +181,9 @@ class tx_fhdebug {
 		}
 
 		if (!$extConf['DEBUGBEGIN']) {
-// error_log ('init setActive TRUE');
 			self::setActive(TRUE);
 		}
 
-// error_log ('======================================== init $extConf: '.print_r($extConf, TRUE));
 		if ($extConf['HTML'] == '1') {
 			self::$bHtml = 1;
 		}
@@ -188,7 +195,7 @@ class tx_fhdebug {
 			}
 
 			$processFilename = self::getProcessFilename();
-// error_log ('init $processFilename = ' . $processFilename);
+//  error_log ('init $processFilename = ' . $processFilename . chr(13), 3, self::$errorLogFilename);
 
 			if (!is_writable($processFilename)) {
 				$hndProcessfile = fopen($processFilename, 'w+b');
@@ -244,14 +251,8 @@ class tx_fhdebug {
 						'',
 						FALSE
 					);
-// error_log ('nach debug start date and time ');
 				}
 			} else {
-// error_log ('vor setActive Pos 2 ');
-
-
-// error_log ('init setActive FALSE');
-
 				self::setActive(FALSE); // no debug is necessary when the file cannot be written anyways
 			}
 
@@ -285,15 +286,13 @@ class tx_fhdebug {
 					'',
 					FALSE
 				);
-// error_log ('vor setActive Pos 3 ');
-// error_log ('init setActive FALSE');
 				self::setActive(FALSE);
 			}
 		}
 
 		self::setHasBeenInitialized(TRUE);
 		self::setIsInitialization(FALSE);
-// error_log ('init ENDE ========================================== ');
+		error_log ('init ENDE ========================================== '. chr(13), 3, self::$errorLogFilename);
 	}
 
 	static public function getProcessFilename () {
@@ -303,17 +302,17 @@ class tx_fhdebug {
 
 	static public function bIsActive () {
 
-// error_log ('bIsActive self::$bActive = ' .  self::$bActive);
+// error_log ('bIsActive self::$bActive = ' .  self::$bActive . chr(13), 3, self::$errorLogFilename);
 		return self::$bActive;
 	}
 
 	static public function setActive ($v) {
-// if ($v) {
-// error_log ('function setActive = ' . $v);
-//
-// $backtrace = self::getTraceArray();
-// error_log('setActive backtrace: ' . print_r($backtrace, TRUE));
-// }
+/*if ($v) {
+error_log ('function setActive = ' . $v  . chr(13), 3, self::$errorLogFilename );
+
+$backtrace = self::getTraceArray();
+error_log('setActive backtrace: ' . print_r($backtrace, TRUE) . chr(13), 3, self::$errorLogFilename);
+}*/
 		self::$bActive = $v;
 	}
 
@@ -621,9 +620,10 @@ error_log('debugEnd backtrace: ' . print_r($backtrace, TRUE));*/
 		$debugLevel = E_DEBUG
 	) {
 		$bControlMode = FALSE;
+		$charset = '';
 
-/*error_log('debug $variable = ' . print_r($variable, TRUE));
-error_log('debug $name = ' . print_r($name, TRUE));
+/*error_log('debug $variable = ' . print_r($variable, TRUE) . chr(13), 3, self::$errorLogFilename);
+error_log('debug $name = ' . print_r($name, TRUE) . chr(13), 3, self::$errorLogFilename);
 */
 		if ($name == 'control:resetTemporaryFile') {
 			self::writeTemporaryFile(0);
@@ -635,22 +635,11 @@ error_log('debug $name = ' . print_r($name, TRUE));
 			!$bControlMode &&
 			(self::bIsActive() || self::bIsInitialization())
 		) {
-			if (TYPO3_MODE == 'FE') { // hooks for FE extensions
-
-				$csConvObj = &$GLOBALS['TSFE']->csConvObj;
-				if (is_object($csConvObj) && $GLOBALS['TSFE']->renderCharset != '') {
-	 				$name = $csConvObj->conv(
-						$name,
-						'utf-8',
-						$GLOBALS['TSFE']->renderCharset
-					);
-				}
-			}
 			$storeIsActive = self::bIsActive();
 			self::setActive(FALSE);
 			self::processUser();
-
 			$extConf = self::getExtConf();
+//  error_log('self::$bUserAllowed: ' . self::$bUserAllowed, 3, self::$errorLogFilename);
 
 			if (self::$bUserAllowed) {
 
@@ -685,30 +674,41 @@ error_log('debug $name = ' . print_r($name, TRUE));
 					$content = self::printTraceLine($traceArray);
 
 					if (self::$bHtml) {
-						$out = 	$head . $content . '<br/>' .
+						$out = $head . $content . '<br/>' .
 							self::printVariable($variable) . chr(13) .
 							'<h3>' . $name . self::getTypeView($variable) . '</h3>' .
 							'<hr/>' . chr(13);
 					} else {
-						$out = 	$head . $content . '|' .
+						$out = $head . $content . '|' .
 							self::printVariable($variable) . chr(13) .
 							'###' . $name . self::getTypeView($variable) . '###' . chr(13) .
 							'--------------------------------------------' . chr(13);
 					}
 				}
 
-				$charset = mb_detect_encoding($out, 'utf-8, iso-8859-1');
-				fputs(self::$hndFile, 'charset = ' . $charset);
-
-				if ($GLOBALS['TYPO3_CONF_VARS']['SYS']['t3lib_cs_convMethod'] != '') {
-					$out = self::$csConvObj->conv($out, $charset, 'utf-8');
+				if (
+					function_exists("mb_check_encoding") &&
+					is_callable("mb_check_encoding")
+				) {
+					$charset = mb_detect_encoding($out, 'UTF-8,ASCII,ISO-8859-1,ISO-8859-15', TRUE);
 				}
 
-				if (self::$hndFile) {
-					fputs(self::$hndFile, $out);
-				} else if ($extConf['DEBUGFILE'] == '') {
-					echo $out;
-				} else if (!self::$bErrorWritten) {
+				if (
+					$charset != '' &&
+					$charset != 'UTF-8' &&
+					$GLOBALS['TYPO3_CONF_VARS']['SYS']['t3lib_cs_convMethod'] != ''
+				) {
+					$out = self::$csConvObj->conv($out, $charset, 'UTF-8');
+				}
+
+//  error_log('$out: ' . $out . chr(13), 3, self::$errorLogFilename);
+				$bWritten = self::write($out);
+//  error_log('debug nach write' . chr(13), 3, self::$errorLogFilename);
+
+				if (
+					!$bWritten &&
+					!self::$bErrorWritten
+				) {
 					$overwriteModeArray = array('x', 'x+', 'xb', 'x+b');
 					if (
 						file_exists($extConf['DEBUGFILE']) &&
@@ -773,7 +773,6 @@ function fhdebug (
 		$debugLevel
 	);
 }
-
 
 
 if (defined("TYPO3_MODE") && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/fh_debug/lib/class.tx_fhdebug.php'])	{
